--- a/src/App.css
+++ b/src/App.css
@@ -15,12 +15,12 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 10;
   color: white;
 }
 
@@ -35,4 +35,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.container {
+  border-color: #61dafb;
+  width: 45 rem;
+  height: 45 rem;
 }
